GH-2593 Add 1.20.5+ support, update libraries (#2595)
* Update libraries

* smh

* Fix 1.20.6 and disable paperweight remap

* Properly format try-catch

* Don't change formatting

* Remove 1.17 causing build errors

* Remove 1.17.1 from README

* Attach issue which make us add ``-XX:+EnableDynamicAgentLoading` to tests jvm args